# HTensor

./: HTensor.cabal  README.md
src/: Demo.hs  Linear.hs  Neural.hs  Tensor.hs
src/Data/Tensor/: Eval.hs  Shape.hs  Source.hs
src/Data/Tensor/Efficient/: Eval.hs  Shape.hs  Source.hs
src/Data/Tensor/Efficient/Eval/: Chunk.hs  Gang.hs  Load.hs  Reduce.hs  Target.hs
src/Data/Tensor/Efficient/Linear/: Base.hs  Delay.hs  Par.hs  Seq.hs
src/Data/Tensor/Efficient/Operators/: Delay.hs  Par.hs  Seq.hs
src/Data/Tensor/Efficient/Source/: Delay.hs  Unbox.hs  Vector.hs
src/Data/Tensor/Eval/: Chunk.hs  Gang.hs  Load.hs  Reduce.hs  Target.hs
src/Data/Tensor/Linear/: Base.hs  Delay.hs  Par.hs  Seq.hs
src/Data/Tensor/Operators/: Delay.hs  Par.hs  Seq.hs
src/Data/Tensor/Simple/: Linear.hs  Neural.hs  Tensor.hs
src/Data/Tensor/Source/: Delay.hs  Unbox.hs  Vector.hs
test/: Main.hs  Neural.hs  SVM.hs  TestBP.hs  TestEF.hs  TestLR.hs  TestPLR.hs
