name:                HTensor
version:             0.1.0.0
homepage:            https://github.com/zwx1127/HTensor
license-file:        LICENSE
author:              zwx85624374@gmail.com
maintainer:          example@example.com
copyright:           zwx85624374@gmail.com
category:            Math, Tensor, Matrix, Linear
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- executable demo
--   hs-source-dirs:      src
--   main-is:             Demo.hs
--   default-language:    Haskell2010
--   other-modules: 
--     Tensor, 
--     Linear,
--     Neural
--   build-depends:       base >= 4.7 && < 5


library
  hs-source-dirs:
      src
  -- ghc-options: -Wall
  build-depends:
      base ==4.*,
      hspec ==2.*
  exposed-modules:
      Data.Tensor.Simple.Tensor,
      Data.Tensor.Simple.Linear,
      Data.Tensor.Simple.Neural
  other-modules:
      Paths_HTensor
  default-language: Haskell2010

test-suite HTensor-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  -- ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , HTensor
  other-modules:
      Main
      TestLR,
      TestBP,
      Paths_HTensor
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*