name:                HTensor
version:             0.1.0.0
homepage:            https://github.com/zwx1127/HTensor
license-file:        LICENSE
author:              zwx85624374@gmail.com
maintainer:          example@example.com
copyright:           zwx85624374@gmail.com
category:            Math, Tensor, Matrix, Linear
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base ==4.*
      , hspec ==2.*
      , vector >= 0.12 && < 0.13
  exposed-modules:
      Data.Tensor.Simple.Tensor,
      Data.Tensor.Simple.Linear,
      Data.Tensor.Simple.Neural,
      Data.Tensor.Efficient.Source,
      Data.Tensor.Efficient.Shape,
      Data.Tensor.Efficient.Source.Vector,
      Data.Tensor.Efficient.Source.Unbox,
      Data.Tensor.Efficient.Source.Delay,
      Data.Tensor.Efficient.Eval.Chunk,
      Data.Tensor.Efficient.Eval.Gang,
      Data.Tensor.Efficient.Eval.Load,
      Data.Tensor.Efficient.Eval.Target,
      Data.Tensor.Efficient.Eval.Reduce,
      Data.Tensor.Efficient.Linear.Base,
      Data.Tensor.Efficient.Linear.Par,
      Data.Tensor.Efficient.Linear.Delay,
      Data.Tensor.Efficient.Eval,
      Data.Tensor.Efficient.Operators.Delay,
      Data.Tensor.Efficient.Operators.Par,
      Data.Tensor.Efficient.Operators.Seq
  other-modules:
      Paths_HTensor
  default-language: Haskell2010

test-suite HTensor-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
--   ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , vector ==0.12.*
    , HTensor
  other-modules:
      TestLR,
      TestPLR,
      TestBP,
      TestEF,
      Paths_HTensor
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*