name:                HTensor
version:             0.1.0.0
homepage:            https://github.com/zwx1127/HTensor
license-file:        LICENSE
author:              zwx85624374@gmail.com
maintainer:          example@example.com
copyright:           zwx85624374@gmail.com
category:            Math, Tensor, Matrix, Linear
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
   type:     git
   location: https://github.com/zwx1127/HTensor.git

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base ==4.*
      , hspec ==2.*
      , vector >= 0.12 && < 0.13
      , random
      , transformers
      , mtl
  exposed-modules:
      Data.Tensor.Source,
      Data.Tensor.Shape,
      Data.Tensor.Source.Vector,
      Data.Tensor.Source.Unbox,
      Data.Tensor.Source.Delay,
      Data.Tensor.Eval.Chunk,
      Data.Tensor.Eval.Gang,
      Data.Tensor.Eval.Load,
      Data.Tensor.Eval.Target,
      Data.Tensor.Eval.Reduce,
      Data.Tensor.Linear.Base,
      Data.Tensor.Linear.Par,
      Data.Tensor.Linear.Seq,
      Data.Tensor.Linear.Delay,
      Data.Tensor.Eval,
      Data.Tensor.Operators.Delay,
      Data.Tensor.Operators.Par,
      Data.Tensor.Operators.Seq
  other-modules:
      Paths_HTensor
  default-language: Haskell2010

test-suite HTensor-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
--   ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , vector ==0.12.*
    , random
    , transformers
    , mtl
    , HTensor
  other-modules:
      TestLR,
      TestBP,
      TestEF,
      Neural,
      SVM,
      Paths_HTensor
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*